feat: add section header

--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
-Anton Romanov
-tworkn1@gmail.com
-I want to learn the necessary technologies to become a *frontend developer*. I try to get new knowledge and constantly learn.
-Basic knowledge of *Html, Css, JS*.
-   
-*Dnipropetrovsk National University*, *Physics and Technology Faculty.*
-Elementary.
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Document</title>
+  </head>
+  <body>
+      <header class="container">
+        <h1>My resume</h1>
+          <img class="photo"
+          src="https://images.pexels.com/photos/3769697/pexels-photo-3769697.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260"
+          alt="avatar"/>
+        <h2>Name:</h2>
+        <p>Anton Romanov</p>
+
+        <h2>Education:</h2>
+        <p class="align">
+          Dnipropetrovsk National University, Physics and Technology Faculty.
+        </p>
+      </header>
