--- a/index.html
+++ b/index.html
@@ -21,3 +21,31 @@
           Dnipropetrovsk National University, Physics and Technology Faculty.
         </p>
       </header>
+
+      <main class="container">
+        <h2>Skills:</h2>
+        <p>Basic knowledge of:</p>
+        <ul class="skills">
+          <li>Html</li>
+          <li>Css</li>
+          <li>JS</li>
+        </ul>
+        <h2>English language:</h2>
+        <p>Elementary.</p>
+
+        <h2>My objective:</h2>
+        <p class="align">
+          I want to learn the necessary technologies to become a frontend
+          developer. I try to get new knowledge and constantly learn.
+        </p>
+      </main>
+
+      <footer class="container">
+        <h2>Email:</h2>
+         <section class="contacts">
+          <p><a class="link" href="mailto:tworkn1@gmail.com">tworkn1@gmail.com</a></p>
+          <p><a class="link" href="github.com/AntonRm">github.com/AntonRm</a></p>
+         </section>
+      </footer>
+  </body>
+</html>
