fix: corrected the addresses in the links

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       <footer class="container">
         <h2>Email:</h2>
          <section class="contacts">
-          <p><a class="link" href="mailto:tworkn1@gmail.com">tworkn1@gmail.com</a></p>
-          <p><a class="link" href="github.com/AntonRm">github.com/AntonRm</a></p>
+          <p><a class="link" href="https://mailto:tworkn1@gmail.com">tworkn1@gmail.com</a></p>
+          <p><a class="link" href="https://github.com/AntonRm">github.com/AntonRm</a></p>
          </section>
       </footer>
   </body>
